--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -29,7 +29,7 @@ body {
 }
 
 .bg-darker {
-	background-color: #a3a6af !important;
+	background-color: #282C34 !important;
 	color: #e0e0e0 !important;
 }
 .navbar.bg-light {
