--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -2,10 +2,15 @@ html, body{height:100%; margin:0;padding:0}
 
 body {
 	min-width: 425px;
-	background-color: #E4E7ED;
 	font-family: Arial;
 }
- 
+
+h1 {
+	font-size: 21px;
+	text-transform: uppercase;
+	color: #6CB520;
+	font-weight: bolder;
+}
 .container-fluid{
   height:100%;
   display:table;
@@ -14,22 +19,22 @@ body {
 }
 
 .bg-light {
-	background-color: #DDE0E7 !important;
-	color: #444 !important;
+	background-color: #87949A !important;
+	color: #f9f9f9 !important;
 }
 
 .bg-lighter {
-	background-color: #E4E7ED !important;
+	background-color: #FEFEFE !important;
 	color: #444 !important;
 }
 
 .bg-dark {
-	background-color: #494F5C !important;
+	background-color: #004566 !important;
 	color: #a3a6af;
 }
 
 .bg-darker {
-	background-color: #282C34 !important;
+	background-color: #002344 !important;
 	color: #e0e0e0 !important;
 }
 .navbar.bg-light {
@@ -64,13 +69,14 @@ body {
 	max-height: 60px;
 }
 
-nav.navbar .avatar {
+.avatar img {
 	width: 55px;
 }
 
 .username {
+	font-size: 13px;
 	font-weight: 500;
-	color: #d3d5da !important;
+	color: #e5e8ef !important;
 }
 
 .fake-tooltip {
@@ -128,7 +134,7 @@ button.bg-primary:hover, a.bg-primary:hover {
 }
 
 .btn-secondary {
-	background-color: #DDE0E7 !important;
+	background-color: #f0f0f1 !important;
 	border: 1px solid #ccc !important;
 	color: #444 !important;
 }
@@ -198,6 +204,18 @@ a[type=button] {
 	border-top-color: #494F5C !important;
 }
 
+.bs-tooltip-auto[x-placement^=right] .arrow::before, .bs-tooltip-right .arrow::before {
+	border-right-color: #494F5C !important;
+}
+
+.bs-tooltip-auto[x-placement^=left] .arrow::before, .bs-tooltip-left .arrow::before {
+	border-left-color: #494F5C !important;
+}
+
+.bs-tooltip-auto[x-placement^=bottom] .arrow::before, .bs-tooltip-bottom .arrow::before {
+	border-bottom-color: #494F5C !important;
+}
+
 .tooltip > .tooltip-inner {
 	background-color: #494F5C !important;
 	padding: 10px 25px;
@@ -207,4 +225,13 @@ a[type=button] {
 table th {
 	padding: 0.3rem !important;
 	font-size: .7em;
+}
+.shadow-light {
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+}
+
+.vbottom{
+    position: relative;
+    top: 100%;
+    transform: translateY(-100%); 
 }
