--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -56,7 +56,7 @@ h1 {
   margin:0 auto;
 }
 #zclogo.small {
-	max-height: 50px;
+	max-height: 60px;
 }
 #zclett.small {
 	max-height: 35px;
@@ -160,7 +160,7 @@ button.bg-blue:hover, a.bg-blue:hover {
 
 .btn-gold {
 	background-color: #FFB324;
-	border: 1px solid #ea9a02;
+	/*border: 1px solid #ea9a02;*/
 	color: #fff;
 }
 
@@ -185,6 +185,8 @@ a[type=button] {
 }
 .table thead th {
 	border-bottom: 1px solid #dee2e6;
+	color: #004566 !important;
+	font-weight: 800;
 }
 .table th {
 	border-top: none;
