--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 .navbar.bg-dark {
-	z-index: 999;
+	z-index: 3;
 }
 
 .border-light {
@@ -232,8 +232,33 @@ table th {
 	box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
 }
 
+.shadow-medium {
+	box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+
+}
+
 .vbottom{
     position: relative;
     top: 100%;
     transform: translateY(-100%); 
+}
+
+#map {
+	width: 100%;
+	height: 100%;
+	min-height: 500px;
+}
+
+.floating-panel {
+  position: absolute;
+  z-index: 5;
+  top:0;
+  background-color: #fff;
+  padding: 5px;
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+.floating-panel.panel-right {
+	right: 0;
 }
