--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 .bg-light {
-	background-color: #efefef !important;
+	background-color: #f5f5f5 !important;
 	color: #777 !important;
 }
 
