--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -450,7 +450,6 @@ ul#list-files li:last-child {
     font-weight: bold;
     font-size: 18px;
     position: relative;
-    top: -5px;
     box-shadow: 2px 10px 6px rgba(0,0,0,.1);
     margin-bottom: .5em;
     clear: both;
@@ -470,17 +469,17 @@ ul#list-files li:last-child {
 	content:'';
 }
 
+.message.warning {
+	padding: 20px 20px 20px 50px !important;
+}
+
 .message.success:before {
 	display: block;
 	position: absolute;
 	left: 15px;
 	font-family: Font Awesome\ 5 Free;
     content: "\f00c";
-    color: #3fc5b3;
-}
-
-.message.warning {
-	padding: 20px 20px 20px 50px !important;
+    color: #fff;
 }
 
 .message.warning:before {
@@ -498,5 +497,5 @@ ul#list-files li:last-child {
 	left: 22px;
 	font-family: Font Awesome\ 5 Free;
     content: "\f129";
-    color: #3fc5b3;
+    color: #fff;
 }
