--- a/css/zerocopy.css
+++ b/css/zerocopy.css
@@ -25,8 +25,7 @@ h1 {
 	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
-	border: 1px solid #e0e0e0;
-	box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
+	border: 1px solid #eee;
 }
 
 .bg-light {
@@ -221,9 +220,9 @@ button.bg-primary:hover, a.bg-primary:hover {
 .bg-full {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8bc53f+0,9abf67+50,8bc53f+100 */
 background: rgb(139,197,63); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(139,197,63,1) 0%, rgba(154,191,103,1) 50%, rgba(139,197,63,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(139,197,63,1) 0%,rgba(154,191,103,1) 50%,rgba(139,197,63,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(139,197,63,1) 0%,rgba(154,191,103,1) 50%,rgba(139,197,63,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(top, rgba(139,197,63,1) 0%, rgb(148, 193, 88) 50%, rgba(139,197,63,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(139,197,63,1) 0%,rgb(148, 193, 88) 50%,rgba(139,197,63,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(139,197,63,1) 0%,rgb(148, 193, 88) 50%,rgba(139,197,63,1) 100%)
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8bc53f', endColorstr='#8bc53f',GradientType=0 ); /* IE6-9 */
 }
 
@@ -394,7 +393,16 @@ ul#list-files li:last-child {
 #list-files .details {
 	font-size: .75rem;
 	color: #999;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.5s linear;
 }
+
+#list-files li:hover .details {
+	visibility: visible;
+  	opacity: 1;
+}
+
 
 #list-files .status {
 	font-size: .60rem;
@@ -448,9 +456,8 @@ ul#list-files li:last-child {
     padding: 20px 50px;
     color: #fff;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 15px;
     position: relative;
-    box-shadow: 2px 10px 6px rgba(0,0,0,.1);
     margin-bottom: .5em;
     clear: both;
 }
